objects/hed__Program_Enrollment__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Graduation_Status__c</fullName>
        <label>Graduation Status</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program the student is enrolled in.</description>
        <inlineHelpText>The program the student is enrolled in.</inlineHelpText>
        <label>Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Admission_Date__c</fullName>
        <label>Admission Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>hed__Affiliation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Contact-Account relationship this academic information is related to.</description>
        <inlineHelpText>The Contact-Account relationship this academic information is related to.</inlineHelpText>
        <label>Affiliation</label>
        <referenceTo>hed__Affiliation__c</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Application_Submitted_Date__c</fullName>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>hed__Class_Standing__c</fullName>
        <label>Class Standing</label>
        <picklist>
            <picklistValues>
                <fullName>Freshman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sophomore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Contact.</description>
        <inlineHelpText>The parent Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>hed__Credits_Attempted__c</fullName>
        <label>Credits Attempted</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>hed__Credits_Earned__c</fullName>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>hed__Eligible_to_Enroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible to Enroll</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>hed__Enrollment_Status__c</fullName>
        <label>Enrollment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Full-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than half-time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__GPA__c</fullName>
        <label>GPA</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>hed__Graduation_Year__c</fullName>
        <description>The expected graduation year from the program.</description>
        <label>Class Year</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>hed__HEDA_Program_Enrollment_Compact_Layout</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><deprecated>false</deprecated><description>Contains details about the relationship a student Contact has with a Department or School (the degree-granting Account type for the University).</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Program Enrollment</label><nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Program Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Program Enrollments</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>